# milq

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: codeswitch.sh  download_msmarco.sh  index_search_colbert.sh  preprocess_clef.sh  preprocess_neuclir.sh  train_colbert.sh  translate.sh
src/preprocessing/: clef_dataloader.py  clef_extractors.py  clef_paths.py  codeswitch.py  fix_document_order.py  preprocess_clef.py  preprocess_neuclir.py  translate.py  utils.py
