[project]
name = "milq"
version = "0.1.0"
description = "MiLQ: benchmarking IR models for bilingual web search with mixed language queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "colbert-ai>=0.3.0",
    "datasets>=2.14.0",
    "ftfy>=6.1.3",
    "jupyter>=1.0.0",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "nltk>=3.9.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyserini>=0.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "sentencepiece>=0.1.99",
    "plaid-x[gpu]",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
